<resources>
    <string name="app_name">BookListing</string>
    <string name="search_hint">Please enter a keyword here</string>
    <string name="no_internet">No internet connection.</string>
    <string name="no_books_found">No books found.</string>
    <string name="settings_menu_item">Settings</string>
    <string name="settings_title">Book Settings</string>

    <string name="settings_order_by_label">Order By</string>
    <string name="settings_order_by_key" translatable="false">orderBy</string>
    <string name="settings_order_by_default" translatable="false">@string/settings_order_by_relevance_value</string>
    <string name="settings_order_by_relevance_label">Relevance</string>
    <string name="settings_order_by_relevance_value" translatable="false">relevance</string>
    <string name="settings_order_by_most_recent_label">Most Recent</string>
    <string name="settings_order_by_most_recent_value" translatable="false">newest</string>

    <string name="settings_max_results_label">Max Results</string>
    <string name="settings_max_results_key" translatable="false">maxResults</string>
    <string name="settings_max_results_default" translatable="false">@string/settings_max_results_10_value</string>
    <string name="settings_max_results_10_label">10</string>
    <string name="settings_max_results_10_value" translatable="false">10</string>
    <string name="settings_max_results_20_label">20</string>
    <string name="settings_max_results_20_value" translatable="false">20</string>
    <string name="settings_max_results_30_label">30</string>
    <string name="settings_max_results_30_value" translatable="false">30</string>
    <string name="settings_max_results_40_label">40</string>
    <string name="settings_max_results_40_value" translatable="false">40</string>
    
    <string name="settings_search_in_label">Search In</string>
    <string name="setting_search_in_key">searchIn</string>
    <string name="settings_search_in_default" translatable="false">@string/settings_search_in_title_value</string>
    <string name="settings_search_in_title_label">Title</string>
    <string name="settings_search_in_title_value" translatable="false">volumes?q=intitle:</string>
    <string name="settings_search_in_author_label">Author</string>
    <string name="settings_search_in_author_value" translatable="false">volumes?q=inauthor:</string>
    <string name="settings_search_in_publisher_label">Publisher</string>
    <string name="settings_search_in_publisher_value" translatable="false">volumes?q=inpublisher:</string>
    <string name="settings_search_in_subject_label">Subject</string>
    <string name="settings_search_in_subject_value" translatable="false">volumes?q=subject:</string>
    <string name="instructions">Enter a word and submit search.\nFor more details about a book, click on it.\nYou can modify search parameters by accessing the menu in the top right corner</string>
</resources>
