<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">

    <ListPreference
        android:defaultValue="@string/settings_order_by_default"
        android:entries="@array/settings_order_by_labels"
        android:entryValues="@array/settings_order_by_values"
        android:key="@string/settings_order_by_key"
        android:title="@string/settings_order_by_label" />

    <ListPreference
        android:defaultValue="@string/settings_search_in_default"
        android:entries="@array/settings_search_in_labels"
        android:entryValues="@array/settings_search_in_values"
        android:key="@string/setting_search_in_key"
        android:title="@string/settings_search_in_label" />

    <ListPreference
        android:defaultValue="@string/settings_max_results_default"
        android:entries="@array/settings_max_results_labels"
        android:entryValues="@array/settings_max_results_values"
        android:key="@string/settings_max_results_key"
        android:title="@string/settings_max_results_label"/>

</PreferenceScreen>